@@ -1,10 +1,6 @@
 # $Id$
 #
-# This is the remctl configuration used for testing the keytab backend's
-# ability to retrieve existing keytabs through remctl.  Currently the only
-# supported and used command is keytab retrieve.  The ACL is written on
-# the fly by the test program.
-#
-# Compare to config/keytab.
+# This is the remctl configuration used for testing the NetDB ACL verifier.
+# The ACL is written on the fly by the test program.
 
-keytab retrieve t/data/keytab-fake test-acl
+netdb node-roles t/data/netdb-fake test-acl
