@@ -4,6 +4,9 @@ wallet 0.3 (unreleased)
 
     Add support for displaying the history of objects and ACLs.
 
+    Add an ACL verifier that checks access against NetDB roles using the
+    NetDB remctl interface.
+
     The wallet backend script now logs all commands and errors to syslog.
 
     The keytab backend now supports limiting generated keytabs to
